# Python-RAG

./: .dockerignore
.devcontainer/: devcontainer.json
JMeter/: Test Plan.jmx
docker/dev/: docker-compose.yml
docker/dev/python/: Dockerfile
python-app/: .gitignore  pyproject.toml
python-app/src/: DataExtraction.ipynb  PdfToText.ipynb  main.ipynb
