[project]
name = "python-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.6",
    "langchain-openai>=0.3.28",
    "lxml>=6.0.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.9.0",
    "unstructured[all-docs]>=0.18.11",
]
